tests/fixtures/compile_errors/numeric_capacity_mismatch/i64_neg.fe
contract Foo:
    pub def bar() -> i64:
        return i64(-9223372036854775809)